--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,6 @@
     <p>Welcome to the Chat App</p>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script type="text/javascript">
-      let socket = io();
-
-      socket.on("connect", () => {
-        console.log("Connected to the Server");
-      });
-    </script>
+    <script type="text/javascript" src="./js/index.js"></script>
   </body>
 </html>
